# logdrop

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.bat  tailwind.config.js
.github/workflows/: build.yml  ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  facets.rs  filter.rs  lib.rs  main.rs  parser.rs
src/components/: DetailPanel.tsx  DropZone.tsx  FacetPanel.tsx  FilterBar.tsx  LogTable.tsx  TabBar.tsx
src/lib/: store.ts  types.ts  useFilterPipeline.ts
